<resources>
    <string name="app_name">blogapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in">Sign In</string>
    <string name="not_have_an_account_sign_in">Not have an account? Sign In</string>
    <string name="Username" />
    <string name="sign_up" />
    <string name="confirm_password">Confirm password</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="username">Username</string>
    <string name="create_profile">Create profile</string>
    <string name="photo_description">Photo description</string>
</resources>